--- a/views/course.erb
+++ b/views/course.erb
@@ -5,7 +5,7 @@
 <% @course_enrollments.each do |student| %>
 	<div class = "student">
 		<img src =
-		<%= "***REMOVED***#{student['sis_user_id']}.JPG" %> >
+		<%= "#{@photos_path}#{student['sis_user_id']}.JPG" %> >
 		<p><%= "#{student['name']}" %></p>
 	</div>
 <% end %>
