Added back link and title

--- a/views/course.erb
+++ b/views/course.erb
@@ -1,3 +1,7 @@
+<h1> Course Photo Roster </h1>
+
+<p><a href = "../courses">Course Listing</a></p>
+
 <section>
 
 <% @course_enrollments.each do |student| %>
